integrated the mer kills stats into the main page